Closed
Bug 775428
Opened 13 years ago
Closed 13 years ago
Add long long template to ipc_message_utils.h for OpenBSD/64bits
Categories
(Core :: IPC, defect)
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: gaston, Assigned: gaston)
Details
Attachments
(1 file)
1.65 KB,
patch
|
cjones
:
review+
|
Details | Diff | Splinter Review |
Followup to bug #745148 part 7 (https://hg.mozilla.org/mozilla-central/rev/100fd0a81f9e), my OpenBSD/amd64 (and sparc64) builds started failing with the following vomit :
ipc/chromium/src/chrome/common/ipc_message_utils.h: In function 'void IPC::WriteParam(IPC::Message*, const P&) [with P = long long int]':
../../ipc/ipdl/_ipdlheaders/mozilla/layers/PLayersParent.h:295: instantiated from 'void mozilla::layers::PLayersParent::Write(const T&, IPC::Message*) [with T = long long int]'
ipc/ipdl/PLayersParent.cpp:2455: instantiated from here
ipc/chromium/src/chrome/common/ipc_message_utils.h:74: error: 'Write' is not a member of 'IPC::ParamTraits<long long int>'
ipc/chromium/src/chrome/common/ipc_message_utils.h: In function 'bool IPC::ReadParam(const IPC::Message*, void**, P*) [with P = int64_t]':
../../ipc/ipdl/_ipdlheaders/mozilla/layers/PLayersParent.h:305: instantiated from 'bool mozilla::layers::PLayersParent::Read(T*, const IPC::Message*, void**) [with T = int64_t]'
ipc/ipdl/PLayersParent.cpp:2464: instantiated from here
ipc/chromium/src/chrome/common/ipc_message_utils.h:80: error: 'Read' is not a member of 'IPC::ParamTraits<long long int>'
(see for example end of http://buildbot.rhaalovely.net/builders/comm-central-amd64/builds/429/steps/build/logs/stdio)
On OpenBSD, int64_t is long long (see bug #648735 comment 27), we already have an unsigned long long template for OpenBSD/64 bits, time to add a long long template.. 32 bits builds are okay but i suppose one of the other templates satisfies the long long type (maybe size_t).
Assignee | ||
Comment 1•13 years ago
|
||
Fixes the build for me on OpenBSD/amd64.
Assignee: nobody → landry
Attachment #643758 -
Flags: review?(jones.chris.g)
![]() |
||
Updated•13 years ago
|
Attachment #643758 -
Flags: review?(jones.chris.g) → review+
Assignee | ||
Comment 2•13 years ago
|
||
![]() |
||
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in
before you can comment on or make changes to this bug.
Description
•