Bug 775428: add a long long template for OpenBSD/64bits, fixes build breakage after 745148. r=cjones